# abom

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LAUNCH.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md
.claude/: launch.json  serve.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/abom-scan/: action.yml
.github/workflows/: ci.yml  pages.yml  release.yml
cli/: .env.example  Dockerfile  MVP_SPEC.md  Makefile  README.md  docker-compose.yml  pyproject.toml
cli/charts/abom/: Chart.yaml
cli/demo/: README.md  demo.py
cli/src/abom/: __init__.py  api.py  audit.py  bom.py  cli.py  config.py  db.py  execution.py  log.py  scan.py  schemas.py  sign.py
cli/tests/: test_audit_chain.py  test_log.py  test_scan.py  test_sign.py
cli/tests/fixtures/sample-agent/: agent.py  mcp.json  requirements.txt
cli/tests/fixtures/sample-agent/prompts/: system.txt
docs/: ABOM_Lighthouse_Onepager.docx  ABOM_Market_Model.xlsx  ABOM_Strategy.docx  ARCHITECTURE.md  STRATEGY.md  build_docx.js  build_market_model.py  build_onepager.js
examples/: README.md  policy.json
examples/crewai-research-crew/: abom.json  crew.py  requirements.txt
examples/langchain-support-agent/: abom.json  agent.py  requirements.txt
examples/langchain-support-agent/prompts/: system.txt
mvp/: .env.example  Makefile  pyproject.toml
mvp/charts/abom/: values.yaml
mvp/demo/: README.md  demo.py
mvp/demo/sample_repo/: tests.py  validator.py
mvp/scripts/: init_db.py
mvp/src/abom/: __init__.py  agents.py  bom.py  config.py  models_router.py  orchestration.py  policy.py
scripts/: demo-run.sh  demo.tape  render-demo.sh
spec/: README.md  abom-0.1.schema.json
spec/examples/: action-provenance.json  composition-manifest.json
website/: adapters.html  architecture.html  get-started.html  index.html  policies.html  policy-builder.html  pricing.html  spec.html  theme.css
website/img/adapters/: README.md
website/spec/: abom-0.1.schema.json  abom-policy-0.1.schema.json
