[project]
name = "abom-cli"
version = "0.1.0"
description = "ABOM — production control plane for agentic AI (Step-1 MVP scaffold)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "temporalio>=1.8",
    "httpx>=0.27",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[project.scripts]
abom = "abom.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abom"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"
