[project]
name = "abom-cli"
version = "0.1.0"
description = "ABOM — the Agent Bill of Materials. Scan, sign, and verify what your AI agents are made of."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "ABOM Contributors" }]
keywords = ["agent", "ai", "sbom", "ml-bom", "ai-security", "provenance", "cyclonedx", "supply-chain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Lean by design — `pip install abom-cli` stays fast and offline.
dependencies = [
    "typer>=0.12",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://abom.ai"
Repository = "https://github.com/josephassiga/abom"
Specification = "https://github.com/josephassiga/abom/tree/main/spec"

[project.optional-dependencies]
# The commercial control-plane / Notary prototype (not needed for scan/verify).
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "temporalio>=1.8",
    "httpx>=0.27",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
]
dev = ["pytest>=8.3", "ruff>=0.7", "jsonschema>=4.21", "build>=1.2", "twine>=5.0"]

[project.scripts]
abom = "abom.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abom"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
